fixed header z-index

--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,7 @@ header{
   padding: 0 1rem;
   position: fixed;
   width: 100vw;
+  z-index: 2;
 }
 
 section.leftheader span,
@@ -287,40 +288,41 @@ div.mini-square{
   background-size: contain;
   background-position: center;
   border: 1rem solid transparent;
+  filter: invert(1);
 }
 
 div.designit{
-  background-color: #a2d39b;
-  border: 1rem solid #d1e9cd;
+  background-color: rgb(93, 44, 100);
+  border: 1rem solid #2e1632;
   background-image: url(../img/designit.svg);
 }
 div.asu{
-  background-color: #61082b;
+  background-color: rgb(158, 247, 212);
   background-image: url(../img/arizona_state_university.svg);
 }
 div.uf{
-  background-color: #0093ce;
+  background-color: #ff6c31;
   background-image: url(../img/university_of_florida.svg);
 }
 div.topps{
-  background-color: #ff1c1c;
+  background-color: rgb(0, 227, 227);
   background-image: url(../img/topps.svg);
 }
 
 div.wbr{
-  background-color: #d5001f;
+  background-color: #2affe0;
   background-image: url(../img/world_bicycle_relief.svg);
 }
 div.hearst{
-  background-color: #b4d0e7;
+  background-color: #4b2f18;
   background-image: url(../img/hearst_corp.svg);
 }
 div.lonely{
-  background-color: rgb(13, 36, 129);
+  background-color: rgb(242, 219, 126);
   background-image: url(../img/lonely_planet.svg);
 }
 div.clearchannel{
-  background-color: rgb(255, 216, 48);
+  background-color: #0027cf;
   background-image: url(../img/clear_channel.svg);
 }
 
